<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profil.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="45dp"
        app:cardCornerRadius="13dp"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="13dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="false"
                    app:shapeAppearanceOverlay="@style/Circular"
                    app:srcCompat="@drawable/img"
                    tools:srcCompat="@drawable/img" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="end"
                >
                <TextView
                    android:id="@+id/textName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textName"
                    android:textAlignment="textStart"
                    tools:ignore="MissingConstraints" />
                <TextView
                    android:id="@+id/textDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textDescription"
                    android:textAlignment="textStart"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="45dp"
        app:cardCornerRadius="13dp"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:minHeight="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:layout_weight="1">
                <TextView
                    android:id="@+id/textLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textLocation"
                    android:textAlignment="textStart"
                    android:layout_marginTop="20dp"
                    android:textFontWeight="@integer/material_motion_duration_medium_2"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/textRobots"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textRobots"
                    android:textAlignment="textStart"
                    android:layout_marginTop="20dp"
                    android:textFontWeight="@integer/material_motion_duration_medium_2"
                    app:layout_constraintVertical_bias="0.809"/>


                <TextView
                    android:id="@+id/textSubscriber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textSubscriber"
                    android:layout_marginTop="20dp"
                    android:textFontWeight="@integer/material_motion_duration_medium_2"
                    android:textAlignment="textStart" />


            </LinearLayout>
           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:layout_weight="1">
               <TextView
                   android:id="@+id/textOvereighteen"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/textOvereighteen"
                   android:textFontWeight="@integer/material_motion_duration_medium_2"
                   android:textAlignment="textStart"
                   android:layout_marginTop="20dp"/>

               <TextView
                   android:id="@+id/textPMS"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/textCoins"
                   android:textAlignment="textStart"
                   tools:ignore="MissingConstraints"
                   android:textFontWeight="@integer/material_motion_duration_medium_2"
                   android:layout_marginTop="20dp"/>

               <TextView
                   android:id="@+id/textPresence"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/textPresence"
                   android:textAlignment="textStart"
                   tools:ignore="MissingConstraints"
                   android:textFontWeight="@integer/material_motion_duration_medium_2"
                   android:layout_marginTop="20dp"/>


           </LinearLayout>



        </LinearLayout>
    </androidx.cardview.widget.CardView>




</LinearLayout>
